syntax = "proto3";

package testchain.faucet;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "testchain/faucet/params.proto";

option go_package = "testchain/x/faucet/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/testchain/faucet/params";
  
  }
  
  // Queries a list of ByAddress items.
  rpc ByAddress (QueryByAddressRequest) returns (QueryByAddressResponse) {
    option (google.api.http).get = "/testchain/faucet/by_address/{address}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryByAddressRequest {
  string address = 1;
}

message QueryByAddressResponse {}

